--- a/css/styles.css
+++ b/css/styles.css
@@ -49,6 +49,9 @@ nav a {
   text-decoration: none;
   color: var(--clr-text);
 }
+a {
+  text-decoration: none;
+}
 
 /* NAVEGACION */
 
@@ -89,6 +92,10 @@ nav .desktop a {
 
 .a__logo {
   padding: 0;
+  /* position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center; */
 }
 .a__logo:hover {
   color: var(--clr-text);
@@ -195,7 +202,7 @@ header .mobile {
   border: 2px solid black;
 }
 
-a .btn-desktop {
+/* a .btn-desktop {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -211,7 +218,8 @@ a .btn-desktop:hover {
   transition: all 0.5s ease;
   background-color: white;
   border: 2px solid black;
-}
+} */
+
 /* ESTILO DE LA PAGINA */
 
 .scroll {
@@ -258,9 +266,9 @@ a .btn-desktop:hover {
   height: 50px;
 }
 
-a {
+/* a {
   text-decoration: none;
-}
+} */
 .desktop-carrusel {
   display: none;
 }
@@ -272,13 +280,40 @@ a {
   display: flex;
   flex-direction: column;
 }
+
 .autor h1 {
   font-size: 2rem;
   padding: 0.5em;
 }
+
+.contenedor_autor_texto {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
 .autor p {
   padding: 2em 1em;
   text-align: justify;
+}
+.autor a {
+  border: 2px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.1rem;
+  margin-bottom: 1.5rem;
+  background-color: black;
+  color: var(--clr-primary);
+  width: 250px;
+  height: 60px;
+}
+.autor a:hover {
+  color: black;
+  transition: all 0.5s ease;
+  background-color: white;
+  border: 2px solid black;
 }
 
 .faqs {
@@ -476,45 +511,62 @@ footer .logo {
     height: 34.375rem;
   }
   .desktop-carrusel {
-    margin-top: 3.75;
+    /* margin-top: 3.75rem; */
     display: flex;
+    position: relative;
     flex-direction: row;
     width: 100%;
     font-size: 1.3rem;
   }
   .fondoAjuste {
-    position: absolute;
+    display: flex;
+    position: relative;
     top: 0;
-    right: 0;
+    left: 30rem;
+
     color: black;
     background-color: black;
     width: calc(100% - 30rem);
     height: 100%;
+    padding: 2rem;
   }
   .desktop-carrusel-texto {
+    /* border: 2px solid red; */
     display: flex;
-    position: absolute;
-    width: 100%;
+    position: relative;
     flex-direction: column;
+    justify-content: space-between;
+    left: 0;
+    width: 100%;
+    padding: 1rem;
   }
   .desktop-carrusel p {
-    position: absolute;
+    position: relative;
+    display: flex;
+    left: 0;
+    width: 100%;
+
     padding: 1.5em;
     color: red;
     font-size: 1.7rem;
   }
   .btn-desktop {
-    display: flex;
-    position: absolute;
+    /* display: flex; */
+    position: relative;
+
     border: 2px solid white;
     background-color: black;
     width: 25rem;
+    padding: 1rem;
     height: 4.375rem;
     color: var(--clr-primary);
-    justify-content: center;
-    align-items: center;
-    top: 55vh;
-    right: 10vw;
+    /* justify-content: flex-end; */
+    /* align-items: flex-end; */
+    /* top: 18rem; */
+    /* top: 50%;
+    left: 45%; */
+    color: white;
+    /* margin-right: 3rem; */
   }
 
   .btn-desktop:hover {
@@ -527,9 +579,9 @@ footer .logo {
   .autor {
     display: flex;
     position: relative;
-    padding: 1rem 1rem 3rem 1rem;
+    padding: 1rem 1rem 1rem 1rem;
     width: 100%;
-    height: 40rem;
+    /* height: 40rem; */
     margin-bottom: 2rem;
   }
 
@@ -537,7 +589,7 @@ footer .logo {
     /* border: 2px solid red; */
     display: flex;
     flex-direction: row;
-    padding: 1rem 2rem;
+    padding: 0 2rem 1rem;
     overflow: hidden;
   }
   .contenedor .foto {
@@ -566,8 +618,12 @@ footer .logo {
     flex-basis: 100%;
   }
 
-  .faqs {
+  .garantias {
     display: flex;
+    position: relative;
     flex-direction: row;
+    justify-content: space-evenly;
+    gap: 3rem;
+    padding: 2rem;
   }
 }
