--- a/css/styles.css
+++ b/css/styles.css
@@ -337,6 +337,11 @@ a .btn-desktop:hover {
   border-radius: 50%;
   margin: 10px 0;
 }
+
+.a_formasDePago {
+  text-decoration: none;
+}
+
 .img__centrar {
   width: 100%;
   align-self: center;
