--- a/css/styles.css
+++ b/css/styles.css
@@ -83,6 +83,9 @@ nav .desktop a {
 .logo {
   font-size: 1.7rem;
   cursor: pointer;
+}
+
+.logo__h3 {
   color: var(--clr-text);
 }
 
@@ -111,7 +114,7 @@ nav .desktop a {
   width: 100%;
   z-index: 2;
   justify-content: space-between;
-  align-items: baseline;
+  /* align-items: baseline; */
   padding: 1em 0;
 }
 
@@ -120,11 +123,6 @@ header .mobile {
 }
 .logo {
   min-width: 250px;
-}
-
-.barra-desplegable {
-  display: block;
-  width: 50%;
 }
 
 .barra__submenu {
@@ -171,14 +169,24 @@ header .mobile {
 }
 
 /* BOTONES */
+.barra-desplegable {
+  display: flex;
+  justify-content: end;
+  align-items: baseline;
+  height: 100%;
+  width: 50%;
+  /* border: 2px solid orange; */
+}
+
 .boton {
   display: flex;
-  margin-right: 0;
+  margin: 0;
   justify-content: flex-end;
   padding: 0 1em;
+  /* border: 2px solid blue; */
 }
 .btn__desplegable {
-  display: block;
+  display: flex;
   top: 0.5em;
   right: 0.5em;
 
@@ -186,10 +194,16 @@ header .mobile {
   background: none;
   border: none;
   font-size: 1.875rem;
-  margin-right: 0px;
+  margin: 0px;
   padding: 0 0.1em;
-  margin-bottom: 0px;
   text-align: end;
+  align-items: baseline;
+}
+
+.material-symbols-outlined {
+  display: flex;
+  font-size: 2.3rem;
+  align-items: ;
 }
 
 .movil-carrusel a {
